overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -17,9 +17,8 @@ html {
                 perspective: 1px;
         -webkit-transform-style: preserve-3d;
                 transform-style: preserve-3d;
-        /* overflow-x: hidden;
-        overflow-y: auto; */
-        overflow: auto;
+        overflow-x: hidden;
+        overflow-y: auto;
     }
 
     .noScroll {
